[package]
name = "npdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.7"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["full"]}
